fdasrv 1.7.1
--------------
v1.7.1
* fix memory leaks in bayesian c code

v1.7.0
* added a pair align function for 1-D data
* added bayesian alignment for 1-D functions

v1.6.2
* updated curve functions to support R^n
* cleaned up curve function for loops

v1.6.1
* bug fixes to curve functions

v1.6.0
* added open and closed curve function (N-D)

v1.5.2
* added image alignment functions and fix minor bugs

v1.5.1
* added gropt optimization methods and alignment

v1.5.0
* added simul optimization method for reparam

v1.4.2
* Fixed gradient bug

v1.4.1
* Fixed bug in doParallel for windows computers
* Fixed numerical issues for high lambda for no warping required

v1.4
* Fixed memory leak in Dynamic Programming algorithm
* Updated random gamma generation to use a fourier basis on the tangent space
* Changed over parallel support to doParallel
* Fixed documentation error

v1.3
* Fixed numerical issues
* Updated documentation

v1.2
* Changed SRVF calculation to use splines for derivatives
* Added control to the amount of warping via lambda to the time_warping function
* Fixed documentation bugs and minor bugs in horizontal PCA calculation

v1.1
* Updated so the parallel functions are windows compatible and windows binary
can be compiled, now suggests doSNOW or doMC
* Added variance calculation to time_warping function

v1.0
* Initial Version of Package