@@ -23,43 +23,39 @@ SqrtMean <- function(gam){
     TT = nrow(gam)
     n = ncol(gam)
     eps = .Machine$double.eps
+    time <- seq(0,1,length.out=TT)
 
-    psi = matrix(0,TT-1,n)
+    psi = matrix(0,TT,n)
+    binsize <- mean(diff(time))
     for (i in 1:n){
-        psi[,i] = sqrt(diff(gam[,i])*TT+eps)
+        psi[,i] = sqrt(gradient(gam[,i],binsize))
     }
 
     # Find Direction
-    mnpsi = rowMeans(psi)
-    w = rowMeans(psi)
-    mu = w/sqrt(sum(w^2/(TT-1)))
-    tt = 1
-    maxiter = 500
-    vec = matrix(0,TT-1,n)
+    mu = rowMeans(psi)
+    stp <- .3
+    maxiter = 501
+    vec = matrix(0,TT,n)
     lvm = rep(0,maxiter)
-    for (iter in 1:maxiter){
-        for (i in 1:n){
-            v = psi[,i] - mu
-            dot <- sum(mu*psi[,i]/(TT-1))
-            dot.limited<- ifelse(dot>1, 1, ifelse(dot<(-1), -1, dot))
-            len = dot.limited
-            if (len > 0.0001){
-                vec[,i] = (len/sin(len))*(psi[,i] - cos(len)*mu)
-            }else{
-                vec[,i] = rep(0,TT-1)
-            }
-        }
-        vm = rowMeans(vec)
-        vm1 = vm*vm
-        lvm[iter] = Enorm(vm)/sqrt(TT)
-        mu = cos(tt*lvm[iter])*mu + (sin(tt*lvm[iter])/lvm[iter])*vm
-        if (lvm[iter] < 1e-6 || iter >= maxiter){
-            break
-        }
+    iter <- 1
+
+    for (i in 1:n){
+      vec[,i] <- inv_exp_map(mu, psi[,i])
+    }
+    vbar <- rowMeans(vec)
+    lvm[iter] <- l2_norm(vbar)
+
+    while (lvm[iter]>0.00000001 & iter<maxiter){
+      mu <- exp_map(mu, stp*vbar)
+      iter <- iter + 1
+      for (i in 1:n){
+        vec[,i] <- inv_exp_map(mu, psi[,i])
+      }
+      vbar <- rowMeans(vec)
+      lvm[iter] <- l2_norm(vbar)
     }
 
-    tmp = mu * mu
-    gam_mu = c(0,cumsum(tmp))/TT
+    gam_mu = cumtrapz(time, mu*mu)
     gam_mu = (gam_mu - min(gam_mu))/(max(gam_mu)-min(gam_mu))
 
     out = list(mu = mu,gam_mu = gam_mu, psi = psi, vec = vec)
